[tool.poetry]
name = "ecdsa"
version = "0.1.0"
description = ""
authors = ["AndresLarrondobuno <andreslarrondobuno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3"
pycoin = "^0.92.20230326"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"